--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Degechisa Abera Regessa</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            text-align: center;
+            padding: 20px;
+            background-color: #f1f1f1;
+        }
+
+        #profile-image {
+            display: block;
+            margin: 0 auto;
+            border-radius: 50%;
+            border: 5px solid #fff;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        h1 {
+            font-size: 30px;
+            margin-top: 20px;
+        }
+
+        #biography {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #f1f1f1;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f1f1f1;
+            font-size: 12px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img id="profile-image" src="images/photo_2022-11-28_13-53-21.jpg" alt="Profile Image">
+        <h1>DEGECHISA ABERA REGASSA</h1>
+    </header>
+
+    <div id="biography">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum elit in libero aliquet, in placerat elit venenatis. Suspendisse commodo mi ac risus efficitur, eu efficitur dolor iaculis. Donec dignissim justo eu tellus lacinia, non fringilla metus consequat.</p>
+        <p>Maecenas at libero odio. Proin ac neque vel est luctus convallis. Nullam scelerisque nunc id eros rhoncus vestibulum. Vivamus vulputate quam sit amet dui tincidunt, id tincidunt lacus dapibus. Integer ac ligula ut dui hendrerit faucibus et a massa.</p>
+    </div>
+
+    <footer>
+        &copy; 2023 Degechisa Abera Regessa. All rights reserved.
+    </footer>
+</body>
+</html>
 
