--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
         #profile-image {
             display: block;
+            width:50%;
+            height:50%;
             margin: 0 auto;
             border-radius: 50%;
             border: 5px solid #fff;
@@ -29,16 +31,17 @@
         }
 
         #biography {
-            max-width: 600px;
+            max-width: 85%;
             margin: 50px auto;
             padding: 20px;
             background-color: #f1f1f1;
+            border-radius: 10;
         }
 
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #f1f1f1;
+            background-color: teal;
             font-size: 12px;
         }
     </style>
@@ -46,7 +49,7 @@
 <body>
     <header>
         <img id="profile-image" src="images/photo_2022-11-28_13-53-21.jpg" alt="Profile Image">
-        <h1>DEGECHISA ABERA REGASSA</h1>
+        <h1 style="color:brown;">DEGECHISA ABERA REGASSA</h1>
     </header>
 
     <div id="biography">
