--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>Maecenas at libero odio. Proin ac neque vel est luctus convallis. Nullam scelerisque nunc id eros rhoncus vestibulum. Vivamus vulputate quam sit amet dui tincidunt, id tincidunt lacus dapibus. Integer ac ligula ut dui hendrerit faucibus et a massa.</p>
     </div>
 
-    <footer>
+    <footer style="color:#fff;">
         &copy; 2023 Degechisa Abera Regessa. All rights reserved.
     </footer>
 </body>
