--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
         #profile-image {
             display: block;
-            width:50%;
-            height:50%;
             margin: 0 auto;
             border-radius: 50%;
             border: 5px solid #fff;
@@ -48,7 +46,7 @@
 </head>
 <body>
     <header>
-        <img id="profile-image" src="images/photo_2022-11-28_13-53-21.jpg" alt="Profile Image">
+        <img width="50%" height="50%" id="profile-image" src="images/photo_2022-11-28_13-53-21.jpg" alt="Profile Image">
         <h1 style="color:brown;">DEGECHISA ABERA REGASSA</h1>
     </header>
 
