--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <header>
-        <img width="50%" height="50%" id="profile-image" src="images/photo_2022-11-28_13-53-21.jpg" alt="Profile Image">
+        <img width="200px" height="200px" id="profile-image" src="images/photo_2022-11-28_13-53-21.jpg" alt="Profile Image">
         <h1 style="color:brown;">DEGECHISA ABERA REGASSA</h1>
     </header>
 
