--- a/index.html
+++ b/index.html
@@ -50,9 +50,21 @@
         <h1 style="color:brown;">DEGECHISA ABERA REGASSA</h1>
     </header>
 
-    <div id="biography">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum rutrum elit in libero aliquet, in placerat elit venenatis. Suspendisse commodo mi ac risus efficitur, eu efficitur dolor iaculis. Donec dignissim justo eu tellus lacinia, non fringilla metus consequat.</p>
-        <p>Maecenas at libero odio. Proin ac neque vel est luctus convallis. Nullam scelerisque nunc id eros rhoncus vestibulum. Vivamus vulputate quam sit amet dui tincidunt, id tincidunt lacus dapibus. Integer ac ligula ut dui hendrerit faucibus et a massa.</p>
+   <div id="biography">
+        <ul> Background profile </ul>
+        <p> my name is Degechisa Abera, as physics teacher I work as a lecturer in Haramaya University for one year, and now I am attending my Master degree in Astrophysics in Adama Science and Technology University  </p>
+        
+         <ul> Education profile </ul>
+        <p> I attended my frist degree (Applied physics) in Haramaya University and attending my second Degree In astrophysics </p>
+ 
+         <ul> Skills </ul>
+        <p>  </p>
+        
+        <ul> Contact Information </ul>
+        <i>phone: 0902594936  </i>
+        <i> email: degechisar123@gmail.com </i>
+        <i> telegram: degechisa abera  </i>
+        <i> whatsapp:02594936 </i>
     </div>
 
     <footer style="color:#fff;">
