--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
     </header>
 
    <div id="biography">
-        <ul> Background profile </ul>
-        <p> my name is Degechisa Abera, as physics teacher I work as a lecturer in Haramaya University for one year, and now I am attending my Master degree in Astrophysics in Adama Science and Technology University  </p>
+       <ul type="square"> <b> Background profile </b></ul>
+        <p style="line-height:1.5"> my name is Degechisa Abera, as physics teacher I work as a lecturer in Haramaya University for one year, and now I am attending my Master degree in Astrophysics in Adama Science and Technology University  </p>
         
-         <ul> Education profile </ul>
-        <p> I attended my frist degree (Applied physics) in Haramaya University and attending my second Degree In astrophysics </p>
+         <ul type="square"> <b>Education profile </b></ul>
+        <p style="line-height:1.5"> I attended my frist degree (Applied physics) in Haramaya University and attending my second Degree In astrophysics </p>
  
-         <ul> Skills </ul>
-        <p>  </p>
+         <ul type="square"> <b>Skills </b></ul>
+        <p>  Teaching physics....</p>
         
-        <ul> Contact Information </ul>
-        <i>phone: 0902594936  </i>
-        <i> email: degechisar123@gmail.com </i>
-        <i> telegram: degechisa abera  </i>
-        <i> whatsapp:02594936 </i>
+        <ul type="square"> <b>Contact Information </b></ul>
+        <li>phone: 0902594936  </li>
+        <li> email: degechisar123@gmail.com </li>
+        <li> telegram: degechisa abera  </li>
+        <li> whatsapp:02594936 </li>
     </div>
 
     <footer style="color:#fff;">
